# Project_CS-4500

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
data/: changingschema.sor  doc.txt  harrypotter.txt  spacey.sor  testfile.sor
demos/: demo_app_node.cpp  demo_app_registrar.cpp  demo_linus_node.cpp  demo_linus_registrar.cpp  demo_node.cpp  demo_registrar.cpp  demo_wordcount_node.cpp  demo_wordcount_registrar.cpp
inc/application/: application.h  application_network_interface.h  argparser.h  demo_app.h  distributed_value.h  key.h  key_value_store.h  linus_app.h  local_network_msg_manager.h  networked_msg_manager.h  socket_network_msg_manager.h  stdout_msg_manager.h  trivial_app.h  word_count_app.h
inc/dataframe/: copy_rower.h  copy_writer.h  dataframe.h  dataframe_column.h  dataframe_helper.h  fielder.h  print_rower.h  row.h  rower.h  schema.h  sorer_integrator.h
inc/messages/: serial.h  serializer.h
inc/network/: distributed_app.h  distributed_app_network_layer.h  network.h  recv_msg_manager.h  socket_network.h
inc/utility/: custom_object.h  custom_string.h  helper.h  map.h  queue.h  thread.h
report/: doc.md
src/application/: application.cpp  application.h  application_network_interface.cpp  argparser.cpp  demo_app.cpp  demo_app.h  distributed_value.cpp  key.cpp  key_value_store.cpp  key_value_store.h  linus_app.cpp  local_network_msg_manager.cpp  networked_msg_manager.cpp  socket_network_msg_manager.cpp  stdout_msg_manager.cpp  stdout_msg_manager.h  trivial_app.cpp  trivial_app.h  word_count_app.cpp
src/dataframe/: SorerIntegrator.h  column.h  copy_rower.cpp  copy_writer.cpp  dataframe.cpp  dataframe.h  dataframe_column.cpp  dataframe_column.h  dataframe_helper.cpp  dataframe_helper.h  euclidean_magnitude_rower.h  fielder.h  print_rower.cpp  print_rower.h  row.cpp  row.h  rower.h  schema.cpp  schema.h  sorer  sorer_integrator.h  summation_rower.h
src/messages/: serial.cpp  serial.h  serialized_arrays.h  serializer.cpp  serializer.h
src/network/: distributed_app.cpp  distributed_app.h  distributed_app_network_layer.cpp  echo_network.h  network.cpp  network.h  recv_msg_manager.h  socket_network.cpp
src/utility/: array.h  custom_object.h  custom_string.cpp  custom_string.h  helper.h  map.cpp  map.h  object.h  queue.cpp  queue.h  thread.h
tests/: demo_app_nonet.cpp  demo_app_wnet.cpp  demo_linus_nonet.cpp  demo_linus_wnet.cpp  demo_node.cpp  demo_trivial_nonet.cpp  demo_wordcount_nonet.cpp  demo_wordcount_wnet.cpp  echo_client.cpp  echo_server.cpp  main.cpp  node.cpp  registrar.cpp  test_array.cpp  test_dataframe.cpp  test_kv_store.cpp  test_map.cpp  test_messages.cpp  test_network.cpp  test_queue.cpp  test_sorer.cpp  trivial_app_nonet.cpp
